size bug resolved, minor changes to the acume implementation